# searxng-mcp-server

./: .gitignore  Dockerfile  LICENSE  LICENSE.txt  README.md  pyproject.toml  server.py  smithery.yaml
.github/workflows/: test.yml
searxng_mcp_server/: __about__.py  __init__.py  server.py
tests/: test_server.py
